# NeoAraBERT

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: neoarabert.yaml
scripts/: run_pipeline.py
scripts/data_preparation/: prepare_data.py  prepare_diacritics_data.py
scripts/pretraining/: export_pretrained.py  preprocess.py  pretrain.py
scripts/tokenizer_training/: merge_tokenizers.py  train_wordpiece_tokenizer.py
src/neoarabert/: __init__.py
src/neoarabert/collator/: __init__.py  collator.py
src/neoarabert/dataloader/: dataloader.py
src/neoarabert/exportable/: model.py  tokenizer.py
src/neoarabert/model/: __init__.py  model.py
src/neoarabert/optimizer/: optimizer.py
src/neoarabert/pretraining/: trainer.py
src/neoarabert/scheduler/: scheduler.py
src/neoarabert/tokenizer/: tokenizer.py
